# bert-tokenizer-c-cpp-bindings

./: Cargo.toml  README.md  build.rs
examples/: demo_tokenizer.rs
src/: lib.rs
